@@ -1,3 +1,7 @@
+2000-09-21  Per Bothner  <per@bothner.com>
+
+	* IntNum.java (divide):  Zero-extend results if high-order bit set.
+
 2000-06-09  Per Bothner  <per@bothner.com>
 
 	* NamedUnit.java:  New class, extends Unit.
